--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#FF6A89</color>
+    <color name="colorPrimaryDark">#FF5675</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackground">#FFC0CB</color>
     <color name="colorButtonMenu">#f5f5f5</color>
+    <color name="colorSplashscreen">#000000</color>
 
 
 </resources>
