--- a/app/src/main/res/layout/gridview_item.xml
+++ b/app/src/main/res/layout/gridview_item.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="3dp"
         android:layout_below="@+id/image" />
 
 </RelativeLayout>
