--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,14 @@
     android:background="@color/colorBackground"
     tools:context="com.example.sao.modclothesproject.MainActivity">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp"
-        android:fillViewport="false"
-        android:id="@+id/scrollView">
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/reback">
+
 
             <ImageButton
 
@@ -53,7 +50,7 @@
 
                 android:layout_width="140dp"
                 android:layout_height="220dp"
-                android:text="WomenStyle"
+                android:text="Calendar"
                 android:id="@+id/btnWomenStyle"
                 android:layout_below="@+id/btnCollection"
                 android:layout_alignParentEnd="true" />
@@ -95,7 +92,8 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="20dp"
                 android:background="@mipmap/collection"
-                android:layout_below="@+id/btnCT" />
+                android:layout_below="@+id/btnCT"
+                android:layout_alignParentEnd="true"/>
 
             <ImageView
                 android:layout_width="140dp"
@@ -104,11 +102,12 @@
                 android:layout_marginLeft="155dp"
                 android:layout_marginRight="5dp"
                 android:background="@mipmap/collection"
-                android:layout_below="@+id/btnC" />
+                android:layout_below="@+id/btnC"
+                android:layout_alignParentEnd="true"/>
 
             <ImageView
                 android:layout_width="80dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="Help"
                 android:id="@+id/imageView6"
                 android:layout_marginStart="10dp" />
@@ -124,46 +123,69 @@
 
             <Button
                 android:layout_width="140dp"
-                android:layout_height="match_parent"
-                android:text="Women Style"
+                android:layout_height="wrap_content"
+                android:text="Calendar"
                 android:id="@+id/btnWS"
+
                 android:layout_alignBottom="@+id/ibtnCalendar" />
 
             <Button
                 android:layout_width="140dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="Closet"
                 android:id="@+id/btnCS"
                 android:layout_alignBottom="@+id/ibtnCloset" />
 
             <Button
                 android:layout_width="140dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="Collection"
                 android:id="@+id/btnCT"
                 android:layout_alignTop="@+id/btnCollection"
-                android:layout_alignStart="@+id/btnCollection"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignStart="@+id/btnCollection"/>
 
             <Button
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:text="About"
                 android:id="@+id/btnA"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:layout_alignEnd="@+id/ibtnCalendar" />
+                android:layout_alignBottom="@+id/imageButton2" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Calendar"
+                android:text="Women Style"
                 android:id="@+id/btnC"
                 android:layout_alignTop="@+id/btnWomenStyle"
                 android:layout_alignStart="@+id/btnWomenStyle"
                 android:layout_alignParentEnd="true" />
+        <RelativeLayout
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true">
+
+            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:fillViewport="false"
+                android:id="@+id/scrollView1">
+            <RelativeLayout
+                android:layout_width="140dp"
+                android:layout_height="400dp"
+                android:layout_marginTop="130dp">
+                <DatePicker
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                android:id="@+id/datePicker"
+                    android:scrollIndicators="none" />
+
+        </RelativeLayout>/
+            </ScrollView>
+        </RelativeLayout>
 
         </RelativeLayout>
 
-    </ScrollView>
+
+
 </RelativeLayout>
