--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -161,8 +161,7 @@
                 android:layout_alignParentEnd="true" />
         <RelativeLayout
             android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true">
+            android:layout_height="300dp">
 
             <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="140dp"
@@ -177,10 +176,19 @@
                 <DatePicker
                     android:layout_width="140dp"
                     android:layout_height="wrap_content"
-                android:id="@+id/datePicker"
+                    android:id="@+id/datePicker"
                     android:scrollIndicators="none" />
 
-        </RelativeLayout>/
+                <ImageButton
+                    android:layout_width="140dp"
+                    android:layout_height="150dp"
+                    android:id="@+id/imageButton"
+                    android:background="@color/com_facebook_button_border_color_focused"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:backgroundTint="#00ffffff" />
+
+            </RelativeLayout>/
             </ScrollView>
         </RelativeLayout>
 
