--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,45 +18,51 @@
 
 
             <ImageButton
-
+                android:layout_marginTop="5dp"
                 android:layout_width="140dp"
-                android:layout_height="130dp"
+                android:layout_height="120dp"
                 android:text="Closet"
                 android:id="@+id/ibtnCloset"
+                android:background="@color/com_facebook_button_border_color_focused"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true" />
 
             <ImageButton
 
                 android:layout_width="140dp"
-                android:layout_height="190dp"
+                android:layout_height="208dp"
                 android:text="Calendar"
                 android:id="@+id/ibtnCalendar"
+                android:layout_marginTop="7dp"
                 android:layout_below="@+id/ibtnCloset"
                 android:layout_alignParentStart="true" />
 
             <ImageButton
-
+                android:layout_marginTop="5dp"
                 android:layout_width="140dp"
                 android:layout_height="220dp"
                 android:text="Collection"
+                android:background="@color/com_facebook_button_border_color_focused"
                 android:id="@+id/btnCollection"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true" />
 
             <ImageButton
-
+                android:layout_marginTop="5dp"
                 android:layout_width="140dp"
                 android:layout_height="220dp"
                 android:text="Calendar"
                 android:id="@+id/btnWomenStyle"
                 android:layout_below="@+id/btnCollection"
+                android:background="@color/com_facebook_button_border_color_focused"
                 android:layout_alignParentEnd="true" />
 
             <ImageButton
                 android:layout_width="140dp"
                 android:layout_height="135dp"
                 android:id="@+id/imageButton2"
+                android:layout_marginTop="5dp"
+                android:background="@color/com_facebook_button_border_color_focused"
                 android:layout_alignParentStart="true"
                 android:layout_alignEnd="@+id/ibtnCalendar"
                 android:layout_below="@+id/btnWS"
@@ -70,25 +76,19 @@
                 android:background="@mipmap/clothes_hanger"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="10dp" />
 
-            <ImageView
-                android:layout_width="130dp"
-                android:layout_height="110dp"
-                android:id="@+id/imageView3"
-                android:layout_alignTop="@+id/ibtnCalendar"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="5dp"
-                android:background="@mipmap/collection" />
+
 
             <ImageView
                 android:layout_width="140dp"
                 android:layout_height="110dp"
                 android:id="@+id/imageView4"
                 android:layout_alignBottom="@+id/btnCollection"
-                android:layout_marginLeft="155dp"
+                android:layout_marginLeft="175dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="20dp"
+                android:layout_marginTop="10dp"
                 android:background="@mipmap/collection"
                 android:layout_below="@+id/btnCT"
                 android:layout_alignParentEnd="true"/>
@@ -97,7 +97,8 @@
                 android:layout_width="140dp"
                 android:layout_height="150dp"
                 android:id="@+id/imageView5"
-                android:layout_marginLeft="155dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="175dp"
                 android:layout_marginRight="5dp"
                 android:background="@mipmap/collection"
                 android:layout_below="@+id/btnC"
@@ -115,46 +116,67 @@
                 android:layout_height="50dp"
                 android:id="@+id/imageView8"
                 android:background="@mipmap/information_symbol"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="45dp"
                 android:layout_below="@+id/ibtnCalendar" />
 
             <Button
                 android:layout_width="140dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:text="Calendar"
+                android:background="@color/com_facebook_button_border_color_focused"
                 android:id="@+id/btnWS"
-
                 android:layout_alignBottom="@+id/ibtnCalendar" />
 
             <Button
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:text="Closet"
-                android:id="@+id/btnCS"
-                android:layout_alignBottom="@+id/ibtnCloset" />
+                android:layout_width="141dp"
+                android:layout_height="81dp"
+                android:background="@color/com_facebook_button_border_color_focused"
+                android:id="@+id/btnWS1"
+                android:layout_marginTop="4dp"
+                android:backgroundTint="#05ffffff" />
+
 
             <Button
                 android:layout_width="140dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:text="Closet"
+                android:id="@+id/btnCS"
+                android:background="@color/com_facebook_button_border_color_focused"
+                android:layout_alignBottom="@+id/ibtnCloset" />
+
+            <Button
+                android:layout_width="141dp"
+                android:layout_height="210dp"
+                android:layout_marginTop="130dp"
+                android:background="@color/com_facebook_button_border_color_focused"
+                android:id="@+id/btnCS1"
+                android:backgroundTint="#05ffffff" />
+
+            <Button
+                android:layout_width="140dp"
+                android:layout_height="40dp"
                 android:text="Collection"
                 android:id="@+id/btnCT"
+                android:background="@color/com_facebook_button_border_color_focused"
                 android:layout_alignTop="@+id/btnCollection"
                 android:layout_alignStart="@+id/btnCollection"/>
 
             <Button
                 android:layout_width="140dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:text="About"
                 android:id="@+id/btnA"
+                android:background="@color/com_facebook_button_border_color_focused"
                 android:layout_alignBottom="@+id/imageButton2" />
 
             <Button
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:text="Women Style"
                 android:id="@+id/btnC"
                 android:layout_alignTop="@+id/btnWomenStyle"
+                android:background="@color/com_facebook_button_border_color_focused"
                 android:layout_alignStart="@+id/btnWomenStyle"
                 android:layout_alignParentEnd="true" />
 
@@ -178,14 +200,16 @@
                     android:id="@+id/datePicker"
                     android:scrollIndicators="none" />
 
-                <ImageButton
+                <!--<ImageButton
                     android:layout_width="140dp"
-                    android:layout_height="150dp"
+                    android:layout_height="180dp"
                     android:id="@+id/imageButton"
                     android:background="@color/com_facebook_button_border_color_focused"
-                    android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:backgroundTint="#00ffffff" />
+                    android:backgroundTint="#00ffffff"
+                    android:layout_alignParentTop="true" />-->
+
+
 
             </RelativeLayout>/
             </ScrollView>
