--- a/app/src/main/res/layout/activity_view_image.xml
+++ b/app/src/main/res/layout/activity_view_image.xml
@@ -7,14 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/s"
     tools:context="com.example.sao.modclothesproject.ViewImage">
-
-    <ImageView
-        android:id="@+id/full_image_view"
-        android:layout_width="fill_parent"
-        android:layout_height="350dp"
-        android:layout_marginTop="5dp"
-         />
 
     <TextView
         android:id="@+id/imagetext"
@@ -29,5 +23,28 @@
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:id="@+id/full_image_view"
+        android:layout_width="fill_parent"
+        android:layout_height="350dp"
+        android:layout_marginTop="5dp"
+         />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home"
+        android:id="@+id/btnEdit"
+        android:layout_alignBottom="@+id/button"
+        android:layout_toStartOf="@+id/button" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        android:id="@+id/btnCancel"
+        android:layout_alignTop="@+id/button"
+        android:layout_toEndOf="@+id/button" />
 
 </RelativeLayout>
