--- a/app/src/main/res/menu/activity_closet_drawer.xml
+++ b/app/src/main/res/menu/activity_closet_drawer.xml
@@ -3,6 +3,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_account_balance_black_24dp"
+            android:title="Home" />
+        <item
             android:id="@+id/nav_shirts"
             android:icon="@mipmap/shirt"
             android:title="Shirts" />
