--- a/app/src/main/res/layout/activity_mainc.xml
+++ b/app/src/main/res/layout/activity_mainc.xml
@@ -59,6 +59,14 @@
             android:layout_alignRight="@+id/info2"
             android:layout_alignEnd="@+id/info2" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button2"
+            android:layout_alignBottom="@+id/imageView4"
+            android:layout_alignParentEnd="true" />
+
 
     </RelativeLayout>
 
