--- a/app/src/main/res/menu/collection.xml
+++ b/app/src/main/res/menu/collection.xml
@@ -3,18 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/add"
+        android:id="@+id/edit"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_mode_edit_black_24dp"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/home"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_account_balance_black_24dp"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/save"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        android:icon="@drawable/ic_save_black_24dp"
+        app:showAsAction="always" />
 
 
 </menu>
