--- a/app/src/main/res/layout/activity_inserts_measurements.xml
+++ b/app/src/main/res/layout/activity_inserts_measurements.xml
@@ -27,7 +27,7 @@
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="wrap_content"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:scaleType="centerCrop"
                     />
 
