--- a/app/src/main/res/layout/activity_mainc.xml
+++ b/app/src/main/res/layout/activity_mainc.xml
@@ -9,67 +9,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.sao.modclothesproject.MaincActivity">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="410dp"
-        android:id="@+id/relativeLayout">
-
-        <ImageView
-            android:id="@+id/info2"
-            android:layout_width="130dp"
-            android:background="@mipmap/body"
-            android:layout_marginLeft="10dp"
-            android:layout_height="396dp" />
-        <ImageView
-            android:id="@+id/info1"
-            android:layout_width="120dp"
-            android:layout_height="335dp"
-            android:layout_marginTop="65dp"
-            android:layout_marginRight="5dp"
-            android:layout_alignRight="@+id/info2"
-            android:layout_alignEnd="@+id/info2" />
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="#2222"
-            android:layout_marginLeft="140dp"
-            android:id="@+id/imageView4" />
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="#CCC2"
-            android:layout_marginTop="150dp"
-            android:layout_marginLeft="140dp"
-            android:id="@+id/imageView5" />
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="#A22"
-            android:layout_marginTop="300dp"
-            android:layout_marginLeft="140dp"
-            android:id="@+id/imageView6" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView"
-            android:layout_alignTop="@+id/info1"
-            android:layout_alignRight="@+id/info2"
-            android:layout_alignEnd="@+id/info2" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button2"
-            android:layout_alignBottom="@+id/imageView4"
-            android:layout_alignParentEnd="true" />
-
-
-    </RelativeLayout>
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/myrecyclerview"
         android:layout_width="match_parent"
@@ -89,6 +28,64 @@
         android:gravity="bottom"
         android:layout_alignTop="@+id/myrecyclerview"
         android:layout_alignParentEnd="true" />
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="410dp"
+            android:background="@color/cardview_light_background"
+            android:id="@+id/relativeLayout">
+
+            <ImageView
+                android:id="@+id/info2"
+                android:layout_width="130dp"
+                android:background="@mipmap/body"
+                android:layout_marginLeft="10dp"
+                android:layout_height="396dp" />
+
+            <ImageView
+                android:id="@+id/info1"
+                android:layout_width="120dp"
+                android:layout_height="335dp"
+                android:layout_marginTop="65dp"
+                android:layout_marginRight="5dp"
+                android:layout_alignRight="@+id/info2"
+                android:layout_alignEnd="@+id/info2" />
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="#2222"
+                android:layout_marginLeft="140dp"
+                android:id="@+id/imageView4" />
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="#CCC2"
+                android:layout_marginTop="150dp"
+                android:layout_marginLeft="140dp"
+                android:id="@+id/imageView5" />
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="#A22"
+                android:layout_marginTop="300dp"
+                android:layout_marginLeft="140dp"
+                android:id="@+id/imageView6" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:layout_alignTop="@+id/info1"
+                android:layout_alignRight="@+id/info2"
+                android:layout_alignEnd="@+id/info2" />
+
+
+
+
+        </RelativeLayout>
 </RelativeLayout>
 
 
