--- a/app/src/main/res/menu/activity_closet_drawer.xml
+++ b/app/src/main/res/menu/activity_closet_drawer.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item
+        <!--<item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_account_balance_black_24dp"
-            android:title="Home" />
+            android:title="Home" />-->
         <item
             android:id="@+id/nav_shirts"
             android:icon="@mipmap/shirt"
