--- a/app/src/main/res/layout/activity_m.xml
+++ b/app/src/main/res/layout/activity_m.xml
@@ -10,64 +10,80 @@
     tools:context="com.example.sao.modclothesproject.MActivity">
 
 
-    <GridView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/gridView"
-        android:numColumns="1"
-        android:columnWidth="60dp"
-        android:gravity="center"
-        android:stretchMode="spacingWidthUniform" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/myrecyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_below="@+id/relativeLayout"
+        android:layout_alignParentStart="true" />
+
+
+
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:layout_alignBottom="@+id/myrecyclerview"
+        android:typeface="monospace"
+        android:gravity="bottom"
+        android:layout_alignTop="@+id/myrecyclerview"
+        android:layout_alignParentEnd="true" />
 
     <RelativeLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/l">
+        android:layout_width="fill_parent"
+        android:layout_height="410dp"
+        android:id="@+id/relativeLayout">
 
         <ImageView
+            android:id="@+id/info2"
             android:layout_width="130dp"
-            android:layout_height="400dp"
             android:background="@mipmap/bodyb"
-            android:layout_marginTop="60dp"
-            android:id="@+id/imageView3" />
+            android:layout_marginLeft="10dp"
+            android:layout_height="396dp" />
+
+        <ImageView
+            android:id="@+id/info1"
+            android:layout_width="120dp"
+            android:layout_height="335dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginRight="5dp"
+            android:layout_alignRight="@+id/info2"
+            android:layout_alignEnd="@+id/info2" />
+
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@mipmap/cessories"
-            android:layout_marginTop="60dp"
+            android:background="#2222"
             android:layout_marginLeft="140dp"
             android:id="@+id/imageView4" />
+
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@mipmap/cessories"
-            android:layout_marginTop="200dp"
+            android:background="#CCC2"
+            android:layout_marginTop="150dp"
             android:layout_marginLeft="140dp"
             android:id="@+id/imageView5" />
+
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@mipmap/cessories"
-            android:layout_marginTop="340dp"
+            android:background="#A22"
+            android:layout_marginTop="300dp"
             android:layout_marginLeft="140dp"
             android:id="@+id/imageView6" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_alignTop="@+id/info1"
+            android:layout_alignRight="@+id/info2"
+            android:layout_alignEnd="@+id/info2" />
+
+
+
 
     </RelativeLayout>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="save"
-        android:id="@+id/btnsave" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        android:id="@+id/button6"
-        android:layout_marginLeft="100dp"
-        android:layout_gravity="center_horizontal" />
-
 </RelativeLayout>
